feat(video): add YouTube video embeds and contact forms\n\n- Create reusable VideoSection component\n- Add brand videos to homepage and sell-with-us pages  \n- Create ContactForm component with language-specific email subjects\n- Install and configure @tailwindcss/aspect-ratio plugin\n- Support for Finnish, Swedish, and English forms

--- a/apps/next-front/package.json
+++ b/apps/next-front/package.json
@@ -30,6 +30,7 @@
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^6.10.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
     "next": "14.0.4",
