--- a/apps/next-front/package.json
+++ b/apps/next-front/package.json
@@ -33,6 +33,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.544.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
