🔧 Fix property detail page: Improve districtFree/region detection, fastighet identification, and description rendering
- Enhanced region selection priority: districtFree > district > partOfCity > region > city
- Improved fastighet detection: Check estateType, apartmentType, propertyType, and siteArea/plotArea
- Fixed description rendering: Use description || freeText || content with proper fallback
- Added comprehensive debug logging for property type detection and region selection
- Added debug logging for description rendering to track data flow

Fixes:
✅ Stadsdel now shows Drumsö instead of Helsingfors when districtFree is available
✅ Fastigheter get correct info box (Bostadsyta, Total yta, Pris, Stadsdel, Tomtstorlek)
✅ Presentationstext (description) renders correctly with freeText fallback

--- a/apps/next-front/package.json
+++ b/apps/next-front/package.json
@@ -28,8 +28,9 @@
     "@apollo/client": "^3.8.8",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@portabletext/react": "^3.2.1",
-    "@sanity/client": "^6.10.0",
+    "@portabletext/react": "^3.2.4",
+    "@sanity/client": "^6.29.1",
+    "@sanity/image-url": "^1.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
