--- a/apps/next-front/package.json
+++ b/apps/next-front/package.json
@@ -32,6 +32,7 @@
     "@sanity/client": "^6.29.1",
     "@sanity/image-url": "^1.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@vis.gl/react-google-maps": "^1.6.1",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
     "lucide-react": "^0.544.0",
