--- a/apps/next-front/package.json
+++ b/apps/next-front/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build",
+    "build": "next build && node scripts/assert-locales.js",
+    "build:verify": "npm run build",
     "start": "next start",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "codegen": "graphql-codegen --config ../../codegen.yml",
@@ -35,29 +39,34 @@
     "@vis.gl/react-google-maps": "^1.6.1",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
+    "isomorphic-dompurify": "^2.11.0",
     "lucide-react": "^0.544.0",
     "next": "14.0.4",
     "next-intl": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^4.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/ui": "^1.2.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.0"
   }
 }
