🔍 ADD: Data Quality Report Tool + Comprehensive Guide
WHAT'S NEW:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

✅ scripts/data-quality-report.js
   - Analyzes all properties from Linear API
   - Identifies missing data by category
   - Prioritizes worst 10 properties
   - Calculates quality score (%)
   - Provides actionable recommendations

✅ DATA-QUALITY-GUIDE.md (comprehensive docs)
   - 5-minute quickstart guide
   - 3-step improvement process
   - Weekly roadmap (30-day plan)
   - Troubleshooting section
   - Best practices for new objects

✅ package.json
   - Added 'npm run data-quality' script

FEATURES:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📊 Analyzes 5 categories:
   1. Grundinfo (Address, Price, etc.)
   2. Byggnadsinformation (Year, Energy, Heating)
   3. Bolagsinformation (Company info for apartments)
   4. Mäklare (Agent info)
   5. Dimensioner (Area, Rooms)

🎯 Smart prioritization:
   - Fields weighted by importance (7-10)
   - Top 10 worst properties highlighted
   - Specific missing fields listed per property

📈 Quality scoring:
   - 90-100%: 🟢 EXCELLENT
   - 75-89%: 🟡 GOOD
   - 60-74%: 🟠 NEEDS IMPROVEMENT
   - <60%: 🔴 POOR

💡 Actionable recommendations:
   - Manual fixes for top 5 properties
   - Bulk edit suggestions
   - Smart defaults for common fields

USAGE:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

# Quick run:
npm run data-quality

# Or directly:
node scripts/data-quality-report.js

# Weekly maintenance:
npm run data-quality > weekly-report-$(date +%Y%m%d).txt

BENEFITS:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

✅ Identify problematic properties in 5 minutes
✅ Prioritize fixes by impact (weighted scoring)
✅ Track improvement over time
✅ Reduce 'Uppgift saknas' on website
✅ Improve user experience with complete data

ROADMAP:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Week 1: Fix top 5 → +15-20% quality score
Week 2: Systematic fixes → 

--- a/apps/next-front/package.json
+++ b/apps/next-front/package.json
@@ -27,7 +27,8 @@
     "pm2:stop": "pm2 stop sothebys-next-front",
     "pm2:restart": "pm2 restart sothebys-next-front",
     "pm2:logs": "pm2 logs sothebys-next-front",
-    "pm2:status": "pm2 list"
+    "pm2:status": "pm2 list",
+    "data-quality": "node scripts/data-quality-report.js"
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
