--- a/apps/next-front/package.json
+++ b/apps/next-front/package.json
@@ -28,7 +28,9 @@
     "pm2:restart": "pm2 restart sothebys-next-front",
     "pm2:logs": "pm2 logs sothebys-next-front",
     "pm2:status": "pm2 list",
-    "data-quality": "node scripts/data-quality-report.js"
+    "data-quality": "node scripts/data-quality-report.js",
+    "data-quality:blueprint": "node scripts/data-quality-report.js --mode=blueprint",
+    "data-quality:full": "node scripts/data-quality-report.js --mode=full"
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
