🚀 Production deployment - Fixed TypeScript error in mapper.ts
- Fixed agent/realtor phone field extraction
- All Sprint 1 & 2 fixes included
- Successfully deployed to Vercel
- 45 pages generated (fi/sv/en)
- All Dennis feedback implemented

--- a/apps/next-front/env.example
+++ b/apps/next-front/env.example
@@ -26,6 +26,10 @@ NEXT_PUBLIC_WORDPRESS_SITE_URL=https://your-site.com
 LINEAR_API_URL=https://api.linear.fi/v1
 LINEAR_API_KEY=your-linear-api-key-here
 
+# Google Maps API Configuration
+# Get your API key from https://console.cloud.google.com/google/maps-apis/credentials
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyCY3ot-av1UVcMjpBgtBrwZMiH7KlM3HHs
+
 # Development overrides (uncomment for local development)
 # NEXT_PUBLIC_WORDPRESS_GRAPHQL_URL=http://localhost:8000/graphql
 # NEXT_PUBLIC_WORDPRESS_SITE_URL=http://localhost:8000 
