--- a/apps/next-front/vercel.json
+++ b/apps/next-front/vercel.json
@@ -1,7 +1,7 @@
 {
   "framework": "nextjs",
-  "buildCommand": "cd ../.. && pnpm install && cd apps/next-front && pnpm run build",
+  "buildCommand": "cd ../.. && corepack enable && corepack prepare pnpm@8.15.1 --activate && pnpm install && cd apps/next-front && pnpm run build",
   "devCommand": "pnpm run dev",
-  "installCommand": "cd ../.. && pnpm install",
+  "installCommand": "corepack enable && corepack prepare pnpm@8.15.1 --activate && cd ../.. && pnpm install",
   "outputDirectory": ".next"
 }
