--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     ]
   },
   "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=8.0.0"
+    "node": ">=20.0.0"
   },
   "packageManager": "pnpm@8.15.1"
 }
