--- a/apps/next-front/vercel.json
+++ b/apps/next-front/vercel.json
@@ -1,7 +1,7 @@
 {
   "framework": "nextjs",
-  "buildCommand": "cd ../.. && pnpm install && cd apps/next-front && pnpm run build",
-  "devCommand": "pnpm run dev",
-  "installCommand": "cd ../.. && pnpm install",
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
   "outputDirectory": ".next"
 }
